[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/dynamic_font/large.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/models/door.tres" type="ArrayMesh" id=2]
[ext_resource path="res://assets/material/normal/stone_tile.tres" type="Material" id=3]
[ext_resource path="res://assets/material/normal/wood_flooring.tres" type="Material" id=4]
[ext_resource path="res://assets/material/normal/door/simple.tres" type="Material" id=5]
[ext_resource path="res://src/Object/Furniture/Table.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/material/normal/stucco/white.tres" type="Material" id=7]
[ext_resource path="res://src/Main.gd" type="Script" id=8]
[ext_resource path="res://assets/mesh/32x18.tres" type="PlaneMesh" id=9]
[ext_resource path="res://assets/material/8bit/door/orange.tres" type="Material" id=10]
[ext_resource path="res://src/Interface/Settings.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/material/8bit/door/yellow.tres" type="Material" id=12]
[ext_resource path="res://assets/material/8bit/door/blue.tres" type="Material" id=13]
[ext_resource path="res://assets/mesh/32x32.tres" type="PlaneMesh" id=14]
[ext_resource path="res://assets/material/8bit/door/green.tres" type="Material" id=15]
[ext_resource path="res://src/Object/Light/CeilingBulbLight.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Interface/QuickStart.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/models/door_frame.tres" type="ArrayMesh" id=18]

[sub_resource type="Animation" id=7]
resource_name = "menu_popup"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 2.5 ),
"transitions": PoolRealArray( 0.5, 0 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2.5, 3 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ 200, -20, 0.0 ]
}

[sub_resource type="GDScript" id=1]
script/source = "extends Spatial
"

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.25098, 0.74902, 0.25098, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.87451, 0.247059, 0.247059, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.247059, 0.247059, 0.87451, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.498039, 0, 1 )

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="FadeDelay" type="Timer" parent="."]

[node name="Buttons" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 200.0
margin_right = 112.0
margin_bottom = 435.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 212.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
text = "Begin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickStart" type="Button" parent="Buttons"]
margin_top = 51.0
margin_right = 212.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
text = "Quick Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 102.0
margin_right = 212.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Buttons"]
margin_top = 153.0
margin_right = 212.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
text = "Load Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveQuit" type="Button" parent="Buttons"]
margin_top = 204.0
margin_right = 212.0
margin_bottom = 251.0
custom_fonts/font = ExtResource( 1 )
text = "Save and Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons"]
autoplay = "menu_popup"
anims/menu_popup = SubResource( 7 )

[node name="Settings" parent="." instance=ExtResource( 11 )]
margin_right = 74.0

[node name="QuickStart" parent="." instance=ExtResource( 17 )]
margin_right = 96.0

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 11, 0 )
current = true
fov = 90.0
script = SubResource( 1 )

[node name="Floor" type="CSGMesh" parent="Spatial"]
mesh = ExtResource( 14 )
material = ExtResource( 4 )

[node name="Ceiling" type="CSGMesh" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18, 0 )
invert_faces = true
mesh = ExtResource( 14 )
material = ExtResource( 3 )

[node name="Light1" parent="Spatial/Ceiling" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10 )

[node name="Light2" parent="Spatial/Ceiling" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10 )

[node name="Light3" parent="Spatial/Ceiling" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10 )

[node name="Light4" parent="Spatial/Ceiling" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )

[node name="FrontWall" type="CSGMesh" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 9, -16 )
mesh = ExtResource( 9 )
material = ExtResource( 7 )

[node name="LeftWall" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, 1, 0, 0, 0, -1, -1, 0, 0, -16, 9, 0 )
mesh = ExtResource( 9 )
material = ExtResource( 7 )

[node name="BackWall" type="CSGMesh" parent="Spatial"]
transform = Transform( -1, 0, 0, 0, 0, -1, 0, -1, 0, 0, 9, 16 )
mesh = ExtResource( 9 )
material = ExtResource( 7 )

[node name="RightWall" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, -1, 0, 0, 0, -1, 1, 0, 0, 16, 9, 0 )
mesh = ExtResource( 9 )
material = ExtResource( 7 )

[node name="Table" parent="Spatial" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 0 )

[node name="TableTop" type="Spatial" parent="Spatial"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 14, 3, 0 )

[node name="TinyDoor" type="CSGMesh" parent="Spatial/TableTop"]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 8.5, 0, 0 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/TableTop/TinyDoor"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 5 )

[node name="GreenBlock" type="CSGBox" parent="Spatial/TableTop"]
transform = Transform( 0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, 0, 1, 6 )
material = SubResource( 2 )

[node name="RedBlock" type="CSGBox" parent="Spatial/TableTop"]
transform = Transform( 0.906308, 0, 0.422618, 0, 1, 0, -0.422618, 0, 0.906308, -2, 1, 4 )
material = SubResource( 3 )

[node name="BlueBlock" type="CSGBox" parent="Spatial/TableTop"]
transform = Transform( 0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, 0.5, 1, 3.5 )
material = SubResource( 4 )

[node name="OrangeBlock" type="CSGBox" parent="Spatial/TableTop"]
transform = Transform( 0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, -0.700005, 3, 4.6 )
material = SubResource( 5 )

[node name="ToTable" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, 0, -1, 0, 1, 0, 1, 0, 0, 16, 0, -7 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/ToTable"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 5 )

[node name="Blue" type="CSGMesh" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Blue"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 13 )

[node name="Blue2" type="CSGMesh" parent="Spatial"]
transform = Transform( -0.866025, 0, -0.5, 0, -1, 0, -0.5, 0, 0.866025, 0, 18, 14 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Blue2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 13 )

[node name="Orange" type="CSGMesh" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -16 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Orange"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 10 )

[node name="Orange2" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, 1, 0, 1, 0, 0, 0, 0, -1, -16, 9, -16 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Orange2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 10 )

[node name="Yellow" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, 1, 0, 1, 0, 0, 0, 0, -1, -16, 12, 16 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Yellow"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 12 )

[node name="Yellow2" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, -1, 0, 0.707107, 0, 0.707107, -0.707107, 0, 0.707107, 16, 16, 14 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Yellow2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 12 )

[node name="Green" type="CSGMesh" parent="Spatial"]
transform = Transform( 0, -1, 0, 0.707107, 0, -0.707107, 0.707107, 0, 0.707107, 16, 16, -14 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Green"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 15 )

[node name="Green2" type="CSGMesh" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, -1, 0, 0, 0, -1, 7, 18, -16 )
mesh = ExtResource( 18 )

[node name="Door" type="MeshInstance" parent="Spatial/Green2"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 15 )
[connection signal="timeout" from="FadeDelay" to="." method="_on_fade_timeout"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/QuickStart" to="QuickStart" method="popup"]
[connection signal="pressed" from="Buttons/Settings" to="Settings" method="popup"]
[connection signal="pressed" from="Buttons/Load" to="." method="load_game"]
[connection signal="pressed" from="Buttons/SaveQuit" to="." method="save_and_exit_game"]
